# email-newsletter

./: Cargo.toml
.cargo/: config.toml
src/: lib.rs  main.rs
tests/: health_check.rs
