[package]
name = "email_newsletter"
version = "0.1.0"
authors = ["Oskar Wiszowaty <kontakt.wiszowaty.o@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_newsletter"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { "version" = "1", features = ["full"] }

[dev-dependencies]
reqwest = "0.12.20"
